K8S/task-4/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saasify-ingress
  namespace: control-plane
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx

  rules:
    - host: saasify.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
